Silence LWJGL3 warnings on recent JDKs.