@@ -75,6 +75,29 @@ jar {
     }
 }
 
+tasks.withType(JavaExec.class).configureEach {
+	environment("__GL_THREADED_OPTIMIZATIONS", 0)
+	jvmArgs(
+		// Required for Java 21+ restricted native access warnings
+		"--enable-native-access=ALL-UNNAMED"
+		// May be needed by Fory on newer JVMs.
+		, "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+		// Makes LWJGL 3.4.3 actually use FFM APIs, which avoids printing warnings.
+		, "--sun-misc-unsafe-memory-access=deny"
+	)
+}
+tasks.withType(Test.class).configureEach {
+	environment("__GL_THREADED_OPTIMIZATIONS", 0)
+	jvmArgs(
+		// Required for Java 21+ restricted native access warnings
+		"--enable-native-access=ALL-UNNAMED"
+		// May be needed by Fory on newer JVMs.
+		, "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+		// Makes LWJGL 3.4.3 actually use FFM APIs, which avoids printing warnings.
+		, "--sun-misc-unsafe-memory-access=deny"
+	)
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -91,4 +114,14 @@ dependencies {
     testImplementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
     testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
     testImplementation "junit:junit:4.13.2"
+
+	// Forces LWJGL3 to use at least $lwjgl3Version, currently 3.4.3, to avoid warnings on Java 25 and up.
+	constraints{
+		implementation("org.lwjgl:lwjgl:$lwjgl3Version")
+		implementation("org.lwjgl:lwjgl-glfw:$lwjgl3Version")
+		implementation("org.lwjgl:lwjgl-jemalloc:$lwjgl3Version")
+		implementation("org.lwjgl:lwjgl-openal:$lwjgl3Version")
+		implementation("org.lwjgl:lwjgl-opengl:$lwjgl3Version")
+		implementation("org.lwjgl:lwjgl-stb:$lwjgl3Version")
+	}
 }
